--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Django>=5.2.0
-channels>=4.0.0
-whitenoise>=6.6.0
-gunicorn>=21.2.0
-python-dotenv>=1.0.0
-daphne>=4.0.0 
+Django==5.2.0
+channels==4.0.0
+whitenoise==6.6.0
+gunicorn==21.2.0
+python-dotenv==1.0.0
+daphne==4.0.0
+asgiref==3.7.2 
