--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-Django==5.2.0
+Django==4.2.7
 channels==4.0.0
-whitenoise==6.6.0
+whitenoise==6.5.0
 gunicorn==21.2.0
 python-dotenv==1.0.0
 daphne==4.0.0
-asgiref==3.7.2 
+asgiref==3.7.2
+channels-redis==4.1.0
+django-redis==5.4.0 
