--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,6 @@ daphne==4.0.0
 asgiref==3.7.2
 channels-redis==4.1.0
 django-redis==5.4.0
-razorpay==1.4.1 
+razorpay==1.4.1
+django-storages==1.14.2
+boto3==1.34.34 
